# math598-llm-project

./: .gitignore  README.md  config.py  contributions.md  contributions.txt  dataset.py  main.py  model.py  pyproject.toml  tokenizer.py  train.py  transformer.ipynb  transformer_backup.ipynb  writeup.md  writeup.txt
.github/workflows/: test.yml
tests/: conftest.py  test_transformer.py
